--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Привет мама</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
   </head>
 
   <body>
-    <h1>Привет мамуля !</h1>
+    <h1>Привет мамуля &#129392;!</h1>
     <p>Ты самая лучшая</p>
     <img
       src="https://koshka.top/uploads/posts/2021-12/1638688498_7-koshka-top-p-kotik-milashka-8.jpg"
